--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -1,72 +1,78 @@
-<div class="modal fade" id="signup" tabindex="-1" aria-labelledby="fileModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="fileModalLabel">Create New Account</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body bg-[#f2f2f2]">
-        <form class="mt-2 px-4" [formGroup]="signUp" (ngSubmit)="onSubmit();sendEmail()">
-          <div class="mb-3 d-flex flex-wrap gap-3">
-            <input type="text" placeholder="First name" class="form-control flex-fill shadow-sm" formControlName="firstName">
-            <span class="text-red-500" *ngIf="signUp.controls['firstName'].touched && signUp.controls['firstName'].hasError('required')">
-              First name is required
-            </span>
-            <span class="text-red-500" *ngIf="signUp.controls['firstName'].touched && signUp.controls['firstName'].hasError('maxlength')">
-              First name must be less than 50 characters
-            </span>
-            <input type="text" placeholder="Last name" class="form-control flex-fill shadow-sm" formControlName="lastName">
-            <span class="text-red-500" *ngIf="signUp.controls['lastName'].touched && signUp.controls['lastName'].hasError('required')">
-              Last name is required
-            </span>
-            <span class="text-red-500" *ngIf="signUp.controls['lastName'].touched && signUp.controls['lastName'].hasError('maxlength')">
-              Last name must be less than 50 characters
-            </span>
-          </div>
-          <div class="mb-3">
-            <input type="email" placeholder="Email address" class="form-control shadow-sm" formControlName="email">
-            <span class="text-red-500" *ngIf="signUp.controls['email'].touched && signUp.controls['email'].errors?.['required']">
-              Email is required
-            </span>
-            <span class="text-red-500" *ngIf="signUp.controls['email'].touched && signUp.controls['email'].hasError('email')">
-              Invalid email format
-            </span>
-          </div>
-          <div class="mb-3">
-            <input type="password" placeholder="Password" class="form-control shadow-sm" formControlName="password">
-            <span class="text-red-500" *ngIf="signUp.controls['password'].touched && signUp.controls['password'].errors?.['required']">
-              Password is required
-            </span>
-            <span class="text-red-500" *ngIf="signUp.controls['password'].touched && signUp.controls['password'].hasError('minlength')">
-              Password must be at least 8 characters
-            </span>
-          </div>
-          <div class="mb-3">
-            <input type="password" placeholder="Confirm Password" class="form-control shadow-sm" formControlName="confirmPassword">
-            <span class="text-red-500" *ngIf="signUp.controls['confirmPassword'].touched && signUp.controls['confirmPassword'].errors?.['required']">
-              Confirm password is required
-            </span>
-            <span class="text-red-500" *ngIf="signUp.errors?.['mismatch']">
-              Passwords do not match
-            </span>
-          </div>
-          <div class="form-check mb-3">
-            <input type="checkbox" class="form-check-input" id="professionalCheck" formControlName="acceptTerms">
-            <span class="text-red-500" *ngIf="signUp.controls['acceptTerms'].touched && signUp.controls['acceptTerms'].errors?.['required']">
-              Please click the checkbox
-            </span>
-            <label class="form-check-label text-xs" for="professionalCheck">I am a professional</label>
-          </div>
-          <button type="submit" class="btn btn-primary w-100 shadow-sm" [disabled]="signUp.invalid" (click)="reset()">Sign Up</button>
-        </form>
+<section class="vh-100" style="background-color: #bae9f3;">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col col-xl-10">
+        <div class="card" style="border-radius: 1rem;">
+          <div class="row g-0">
         
-        <div class="text-xs text-center mt-4">
-          <p>By registering, I accept the Cityscape.com <a href="#" class="text-blue-500" [routerLink]="[]">Terms of Use</a>.</p>
+            <div class="col-md-6 col-lg-7 d-flex align-items-center">
+              <div class="card-body p-4 p-lg-5 text-black">
+
+                <form [formGroup]="signUp" >
+
+                  <div class="d-flex align-items-center mb-3 pb-1">
+                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
+                    <span class="h1 fw-bold mb-0">Cityscape Rentals</span>
+                  </div>
+
+                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Create your account</h5>
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="email" id="form2Example172" class="form-control form-control-lg"
+                      formControlName="email" />
+                    <label class="form-label" for="form2Example172">Email address</label>
+                    <span class="text-red-500" *ngIf="signUp.controls['email'].touched && signUp.controls['email'].errors?.['required']">
+                      Email is required
+                    </span>
+                    <span class="text-red-500" *ngIf="signUp.controls['email'].touched && signUp.controls['email'].hasError('email')">
+                      Invalid email format
+                    </span>
+                  
+                  </div>
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="text" id="form2Example17" class="form-control form-control-lg"
+                      formControlName="username" />
+                    <label class="form-label" for="form2Example17">Username</label>
+                    <span class="text-red-500" *ngIf="signUp.controls['username'].touched && signUp.controls['username'].errors?.['required']">
+                      Username is required
+                    </span>
+                  </div>
+                
+
+                  <div data-mdb-input-init class="form-outline mb-4">
+                    <input type="password" id="form2Example27" class="form-control form-control-lg"
+                      formControlName="password" />
+                    <label class="form-label" for="form2Example27">Password</label>
+                    <span class="text-red-500" *ngIf="signUp.controls['password'].touched && signUp.controls['password'].errors?.['required']">
+                      Password is required
+                    </span>
+                    <span class="text-red-500" *ngIf="signUp.controls['password'].touched && signUp.controls['password'].hasError('minlength')">
+                      Password must be at least 8 characters
+                    </span>
+
+                    
+                  </div>
+
+                  <div class="pt-1 mb-4">
+                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block"
+                      type="button" [disabled]="signUp.invalid" (click)="reset()">Sign Up</button>
+                  </div>
+                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Already have an account? <a routerLink="/login"
+                      style="color: #393f81;">Login here</a></p>
+                </form>
+
+              </div>
+            </div>
+
+
+            <div class="col-md-6 col-lg-5 d-none d-md-block">
+              <img
+                src="https://images.unsplash.com/photo-1600585154526-990dced4db0d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHByb3BlcnR5fGVufDB8fDB8fHww"
+                alt="login form" class="img-fluid" style="border-radius: 0 1rem 1rem 0;" />
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
-</div>
+</section>
