--- a/property-rental-main-app/src/app/components/login/login.component.html
+++ b/property-rental-main-app/src/app/components/login/login.component.html
@@ -73,3 +73,12 @@
     </div>
   </div>
 </section>
+
+
+
+<!-- <h2>Login</h2>
+<form (ngSubmit)="login()">
+  <input type="email" placeholder="Email" [(ngModel)]="credentials.email" name="email" required>
+  <input type="password" placeholder="Password" [(ngModel)]="credentials.password" name="password" required>
+  <button type="submit">Login</button>
+</form> -->
