--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -76,3 +76,12 @@
     </div>
   </div>
 </section>
+
+
+<!-- <h2>Signup</h2>
+<form (ngSubmit)="register()">
+  <input type="text" placeholder="Username" [(ngModel)]="user.username" name="username" required>
+  <input type="email" placeholder="Email" [(ngModel)]="user.email" name="email" required>
+  <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" required>
+  <button type="submit">Signup</button>
+</form> -->
