--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -1,4 +1,4 @@
-<section class="vh-100" style="background-color: #bae9f3;">
+<!-- <section class="vh-100" style="background-color: #bae9f3;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
@@ -8,7 +8,7 @@
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
               <div class="card-body p-4 p-lg-5 text-black">
 
-                <form [formGroup]="signUp" >
+                <form [formGroup]="signUp" (ngSubmit)="register()" >
 
                   <div class="d-flex align-items-center mb-3 pb-1">
                     <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
@@ -55,7 +55,7 @@
 
                   <div class="pt-1 mb-4">
                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block"
-                      type="button" [disabled]="signUp.invalid" (click)="reset()">Sign Up</button>
+                      type="button" [disabled]="signUp.invalid" (click)="register()">Sign Up</button>
                   </div>
                   <p class="mb-5 pb-lg-2" style="color: #393f81;">Already have an account? <a routerLink="/login"
                       style="color: #393f81;">Login here</a></p>
@@ -75,7 +75,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <!-- <h2>Signup</h2>
