--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -32,7 +32,7 @@
     </button>
 
     <div class="hidden group-hover:block mt-4 bg-gray-50 p-4 border rounded-lg">
-      <p class="text-sm font-bold text-gray-900">{{ floorDetails.highlights.title || "Not Available"}}</p>
+      <p class="text-sm font-bold text-gray-900">Highlights</p>
       <div class="d-flex gap-4 mt-4 text-secondary">
         <ul class="list-unstyled ps-3 mb-0">
           <li>{{ floorDetails.highlights.features  || "Not Available"}}</li>
