--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -46,8 +46,7 @@
     </div>
 
   </div>
-  <div class="col-4">
+  <div class="">
     <app-contact-property [propertyContact]="product"></app-contact-property>
-
   </div>
 </div>
