--- a/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
+++ b/property-rental-main-app/src/app/page/property-map-view/property-map-view.component.html
@@ -10,7 +10,7 @@
     <!-- Filter by Price -->
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Filter by Price</label>
-      <select id="sort"(change)="onSortChange($event)"
+      <select id="sort" (change)="onSortChange($event)"
         class="form-select w-full p-3 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         <option value="lowToHigh">Low to High</option>
         <option value="highToLow">High to Low</option>
@@ -21,7 +21,8 @@
       <label class="block text-sm font-medium text-gray-800 mb-3">Filter by Area</label>
       <div class="space-y-2">
         <div class="flex items-center" *ngFor="let option of bhkOptions">
-          <input [(ngModel)]="option.checked" (change)="filterProperties('bhk',this.bhkOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <input [(ngModel)]="option.checked" (change)="filterProperties('bhk',this.bhkOptions)" type="checkbox"
+            class="form-checkbox h-5 w-5 text-blue-600" />
           <span class="ml-2 text-gray-700">{{ option.label }}</span>
         </div>
       </div>
@@ -31,8 +32,9 @@
     <div class="property-filter mb-6">
       <label class="block text-sm font-medium text-gray-800 mb-3">Type of Property</label>
       <div class="space-y-2">
-        <div class="flex items-center"  *ngFor="let option of TypeofPropertysOptions">
-          <input  [(ngModel)]="option.checked" (change)="filterProperties('propertyType',this.TypeofPropertysOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+        <div class="flex items-center" *ngFor="let option of TypeofPropertysOptions">
+          <input [(ngModel)]="option.checked" (change)="filterProperties('propertyType',this.TypeofPropertysOptions)"
+            type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
           <span class="ml-2 text-gray-700">{{ option.label }}</span>
         </div>
       </div>
@@ -43,7 +45,8 @@
       <label class="block text-sm font-medium text-gray-800 mb-3">Furnishing</label>
       <div class="space-y-2">
         <div class="flex items-center" *ngFor="let option of furnishingOptions">
-          <input [(ngModel)]="option.checked" (change)="filterProperties('furnishing',this.furnishingOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <input [(ngModel)]="option.checked" (change)="filterProperties('furnishing',this.furnishingOptions)"
+            type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
           <span class="ml-2 text-gray-700"> {{ option.label }}</span>
         </div>
       </div>
@@ -54,7 +57,8 @@
       <label class="block text-sm font-medium text-gray-800 mb-3">Parking</label>
       <div class="space-y-2">
         <div class="flex items-center" *ngFor="let option of ParkingOptions">
-          <input [(ngModel)]="option.checked" (change)="filterProperties('parking',this.ParkingOptions)" type="checkbox" class="form-checkbox h-5 w-5 text-blue-600" />
+          <input [(ngModel)]="option.checked" (change)="filterProperties('parking',this.ParkingOptions)" type="checkbox"
+            class="form-checkbox h-5 w-5 text-blue-600" />
           <span class="ml-2 text-gray-700">{{ option.label }}</span>
         </div>
       </div>
@@ -65,17 +69,32 @@
   <!-- Property Cards -->
   <div class="left w-[70%] h-[95%] px-20">
 
-<div>
-  <app-property-cards 
-  *ngFor="let apartment of filteredProperties|filterCards:searchText|paginate : { itemsPerPage: pageSize, currentPage }; let i = index"
-   [propertyCard]="apartment" [index]="i"  >
-</app-property-cards>
-</div>
+    <div>
+
+      <app-property-cards
+        *ngFor="let apartment of filteredProperties|filterCards:searchText|paginate : { itemsPerPage: pageSize, currentPage }; let i = index"
+        [propertyCard]="apartment" [index]="i">
+      </app-property-cards>
+      <ng-container>
+        <!-- Loader -->
+        <div class="d-flex justify-content-center align-items-center" *ngIf="loader" style="height: 40vh;">
+          <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+
+        <!-- No Data Found -->
+        <div class="d-flex justify-content-center align-items-center text-center"
+          *ngIf="!loader && filteredProperties.length === 0" style="height: 40vh;">
+          <h1 class="text-muted">No Data Found</h1>
+        </div>
+      </ng-container>
+
+    </div>
     <div class="border-top text-white d-md-flex justify-content-center align-items-center p-3 ">
       <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
     </div>
   </div>
-  
-  
-</section>
 
+
+</section>
