--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -1,88 +1,31 @@
-<!-- <section class="vh-100" style="background-color: #bae9f3;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-xl-10">
-        <div class="card" style="border-radius: 1rem;">
-          <div class="row g-0">
-        
-            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-              <div class="card-body p-4 p-lg-5 text-black">
-
-                <form [formGroup]="signUp" (ngSubmit)="register()" >
-
-                  <div class="d-flex align-items-center mb-3 pb-1">
-                    <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
-                    <span class="h1 fw-bold mb-0">Cityscape Rentals</span>
-                  </div>
-
-                  <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Create your account</h5>
-
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="email" id="form2Example172" class="form-control form-control-lg"
-                      formControlName="email" />
-                    <label class="form-label" for="form2Example172">Email address</label>
-                    <span class="text-red-500" *ngIf="signUp.controls['email'].touched && signUp.controls['email'].errors?.['required']">
-                      Email is required
-                    </span>
-                    <span class="text-red-500" *ngIf="signUp.controls['email'].touched && signUp.controls['email'].hasError('email')">
-                      Invalid email format
-                    </span>
-                  
-                  </div>
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="text" id="form2Example17" class="form-control form-control-lg"
-                      formControlName="username" />
-                    <label class="form-label" for="form2Example17">Username</label>
-                    <span class="text-red-500" *ngIf="signUp.controls['username'].touched && signUp.controls['username'].errors?.['required']">
-                      Username is required
-                    </span>
-                  </div>
-                
-
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="form2Example27" class="form-control form-control-lg"
-                      formControlName="password" />
-                    <label class="form-label" for="form2Example27">Password</label>
-                    <span class="text-red-500" *ngIf="signUp.controls['password'].touched && signUp.controls['password'].errors?.['required']">
-                      Password is required
-                    </span>
-                    <span class="text-red-500" *ngIf="signUp.controls['password'].touched && signUp.controls['password'].hasError('minlength')">
-                      Password must be at least 8 characters
-                    </span>
-
-                    
-                  </div>
-
-                  <div class="pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block"
-                      type="button" [disabled]="signUp.invalid" (click)="register()">Sign Up</button>
-                  </div>
-                  <p class="mb-5 pb-lg-2" style="color: #393f81;">Already have an account? <a routerLink="/login"
-                      style="color: #393f81;">Login here</a></p>
-                </form>
-
-              </div>
-            </div>
-
-
-            <div class="col-md-6 col-lg-5 d-none d-md-block">
-              <img
-                src="https://images.unsplash.com/photo-1600585154526-990dced4db0d?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHByb3BlcnR5fGVufDB8fDB8fHww"
-                alt="login form" class="img-fluid" style="border-radius: 0 1rem 1rem 0;" />
-            </div>
-          </div>
-        </div>
-      </div>
+<div class="signup-container">
+  <h2>Signup</h2>
+  <form (ngSubmit)="onSignup()">
+    <div>
+      <label>First Name:</label>
+      <input type="text" [(ngModel)]="firstName" name="firstName" required />
     </div>
-  </div>
-</section> -->
+    <div>
+      <label>Last Name:</label>
+      <input type="text" [(ngModel)]="lastName" name="lastName" required />
+    </div>
+    <div>
+      <label>Contact Number:</label>
+      <input type="text" [(ngModel)]="contactNumber" name="contactNumber" required />
+    </div>
+    <div>
+      <label>Email:</label>
+      <input type="email" [(ngModel)]="email" name="email" required />
+    </div>
+    <div>
+      <label>Password:</label>
+      <input type="password" [(ngModel)]="password" name="password" required />
+    </div>
+    <button type="submit" [disabled]="isSubmitting">Signup</button>
+  </form>
 
-
-<!-- <h2>Signup</h2>
-<form (ngSubmit)="register()">
-  <input type="text" placeholder="Username" [(ngModel)]="user.username" name="username" required>
-  <input type="email" placeholder="Email" [(ngModel)]="user.email" name="email" required>
-  <input type="password" placeholder="Password" [(ngModel)]="user.password" name="password" required>
-  <button type="submit">Signup</button>
-</form> -->
-
+  <!-- ✅ Success and Error Message Display -->
+  <p *ngIf="message" [ngClass]="{'success-message': !isError, 'error-message': isError}">
+    {{ message }}
+  </p>
+</div>
