--- a/property-rental-main-app/src/app/components/login/login.component.html
+++ b/property-rental-main-app/src/app/components/login/login.component.html
@@ -1,15 +1,9 @@
-<div class="login-container">
-  <h2>Login</h2>
-  <form (ngSubmit)="onLogin()">
-    <div>
-      <label>Email:</label>
-      <input type="email" [(ngModel)]="email" name="email" required />
-    </div>
-    <div>
-      <label>Password:</label>
-      <input type="password" [(ngModel)]="password" name="password" required />
-    </div>
-    <button type="submit">Login</button>
-  </form>
-  <p *ngIf="message">{{ message }}</p>
-</div>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <label for="email">Email:</label>
+  <input id="email" formControlName="email" type="email">
+
+  <label for="password">Password:</label>
+  <input id="password" formControlName="password" type="password">
+
+  <button type="submit">Login</button>
+</form>
