--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -1,31 +1,19 @@
-<div class="signup-container">
-  <h2>Signup</h2>
-  <form (ngSubmit)="onSignup()">
-    <div>
-      <label>First Name:</label>
-      <input type="text" [(ngModel)]="firstName" name="firstName" required />
-    </div>
-    <div>
-      <label>Last Name:</label>
-      <input type="text" [(ngModel)]="lastName" name="lastName" required />
-    </div>
-    <div>
-      <label>Contact Number:</label>
-      <input type="text" [(ngModel)]="contactNumber" name="contactNumber" required />
-    </div>
-    <div>
-      <label>Email:</label>
-      <input type="email" [(ngModel)]="email" name="email" required />
-    </div>
-    <div>
-      <label>Password:</label>
-      <input type="password" [(ngModel)]="password" name="password" required />
-    </div>
-    <button type="submit" [disabled]="isSubmitting">Signup</button>
-  </form>
+<form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+  <label for="firstName">First Name:</label>
+  <input id="firstName" formControlName="firstName">
 
-  <!-- ✅ Success and Error Message Display -->
-  <p *ngIf="message" [ngClass]="{'success-message': !isError, 'error-message': isError}">
-    {{ message }}
-  </p>
-</div>
+  <label for="lastName">Last Name:</label>
+  <input id="lastName" formControlName="lastName">
+
+  <label for="contactNumber">Contact Number:</label>
+  <input id="contactNumber" formControlName="contactNumber">
+
+  <label for="email">Email:</label>
+  <input id="email" formControlName="email" type="email">
+
+  <label for="password">Password:</label>
+  <input id="password" formControlName="password" type="password">
+
+  <button type="submit">Sign Up</button>
+</form>
+<p>{{ message }}</p>
