--- a/property-rental-main-app/src/app/components/login/login.component.html
+++ b/property-rental-main-app/src/app/components/login/login.component.html
@@ -1,9 +1,65 @@
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-  <label for="email">Email:</label>
-  <input id="email" formControlName="email" type="email">
+<!-- Section: Design Block -->
+<section class="">
+  <!-- Jumbotron -->
+  <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+    <div class="container">
+      <div class="row gx-lg-5 align-items-center">
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          <h1 class="my-5 display-3 fw-bold ls-tight">
+            "Easy rentals, <br />
+            <span class="text-primary"> trusted connections."</span>
+          </h1>
+          <p style="color: hsl(217, 10%, 50.8%)">
+            Our property rental system makes renting simple and hassle-free.
+             Whether you're a property owner looking to list your rental or a
+              tenant searching for the perfect home, our platform ensures a smooth
+               and secure experience. With user-friendly features and a reliable process,
+                we connect landlords and tenants effortlessly, making property management easier than ever.
+          </p>
+        </div>
 
-  <label for="password">Password:</label>
-  <input id="password" formControlName="password" type="password">
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          <div class="card">
+            <div class="card-body py-5 px-md-5">
+              <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+          
+                <!-- Email input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="email" id="form3Example3" formControlName="email" class="form-control" />
+                  <label class="form-label"  for="email">Email address</label>
+                  <small class="text-danger" *ngIf="loginForm.controls['email'].touched && loginForm.controls['email'].hasError('required')">
+                    Email is required
+                  </small>
+                  <small class="text-danger" *ngIf="loginForm.controls['email'].touched && loginForm.controls['email'].hasError('email')">
+                    Please enter a valid email address
+                  </small>
+                </div>
+              
 
-  <button type="submit">Login</button>
-</form>
+                <!-- Password input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="password" id="form3Example4"  formControlName="password" class="form-control" />
+                  <label class="form-label" for="password">Password</label>
+                  <small class="text-danger" *ngIf="loginForm.controls['password'].touched && loginForm.controls['password'].hasError('required')">
+                    Password is required
+                  </small>
+                </div>
+
+     
+
+                <!-- Submit button -->
+                <button [disabled]="loginForm.invalid" type="submit" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
+                  Log in
+                </button>
+
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Jumbotron -->
+</section>
+<!-- Section: Design Block -->
