--- a/property-rental-main-app/src/app/components/signup/signup.component.html
+++ b/property-rental-main-app/src/app/components/signup/signup.component.html
@@ -1,19 +1,115 @@
-<form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-  <label for="firstName">First Name:</label>
-  <input id="firstName" formControlName="firstName">
+<!-- <form >
+  <label >First Name:</label>
+  <input id="firstName" >
 
-  <label for="lastName">Last Name:</label>
-  <input id="lastName" formControlName="lastName">
+  <label >Last Name:</label>
+  <input id="lastName" >
 
-  <label for="contactNumber">Contact Number:</label>
-  <input id="contactNumber" formControlName="contactNumber">
+  <label >Contact Number:</label>
+  <input id="contactNumber" >
 
   <label for="email">Email:</label>
-  <input id="email" formControlName="email" type="email">
+  <input id="email"  type="email">
 
-  <label for="password">Password:</label>
-  <input id="password" formControlName="password" type="password">
+  <label>Password:</label>
+  <input id="password"  type="password">
 
   <button type="submit">Sign Up</button>
 </form>
-<p>{{ message }}</p>
+-->
+
+<!-- Section: Design Block -->
+<section class="">
+  <!-- Jumbotron -->
+  <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+    <div class="container">
+      <div class="row gx-lg-5 align-items-center">
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          <h1 class="my-5 display-3 fw-bold ls-tight">
+            "Rent smarter, <br />
+            <span class="text-primary">live better."</span>
+          </h1>
+          <p style="color: hsl(217, 10%, 50.8%)">
+            Our property rental system is designed to make renting easy, fast, and secure.
+             With a seamless process for listing properties and finding rentals, we bridge
+              the gap between landlords and tenants effortlessly. Whether you're looking to
+               rent out a property or find a perfect place to stay, our platform ensures a
+                smooth and reliable experience for everyone.
+          </p>
+        </div>
+
+        <div class="col-lg-6 mb-5 mb-lg-0">
+          <div class="card">
+            <div class="card-body py-5 px-md-5">
+              <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+                <!-- 2 column grid layout with text inputs for the first and last names -->
+                <div class="row">
+                  <div class="col-md-6 mb-4">
+                    <div data-mdb-input-init class="form-outline">
+                      <input type="text" id="form3Example1" formControlName="firstName" class="form-control" />
+                      <label class="form-label" for="firstName">First name</label>
+                      <small class="text-danger" *ngIf="signupForm.controls['firstName'].touched && signupForm.controls['firstName'].hasError('required')">
+                        First name is required
+                      </small>
+                    </div>
+                  </div>
+                  <div class="col-md-6 mb-4">
+                    <div data-mdb-input-init class="form-outline">
+                      <input type="text" id="form3Example2" formControlName="lastName" class="form-control" />
+                      <label class="form-label" for="lastName">Last name</label>
+                      <small class="text-danger" *ngIf="signupForm.controls['lastName'].touched && signupForm.controls['lastName'].hasError('required')">
+                        Last name is required
+                      </small>
+                    </div>
+                  </div>
+                </div>
+              
+                <!-- Email input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="email" id="form3Example3" formControlName="email" class="form-control" />
+                  <label class="form-label" for="form3Example3">Email address</label>
+                  <small class="text-danger" *ngIf="signupForm.controls['email'].touched && signupForm.controls['email'].hasError('required')">
+                    Email is required
+                  </small>
+                  <small class="text-danger" *ngIf="signupForm.controls['email'].touched && signupForm.controls['email'].hasError('email')">
+                    Please enter a valid email address
+                  </small>
+                </div>
+              
+                <!-- contact number -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="number" id="form3Example5" formControlName="contactNumber" class="form-control" />
+                  <label class="form-label" for="contactNumber">Contact Number</label>
+                  <small class="text-danger" *ngIf="signupForm.controls['contactNumber'].touched && signupForm.controls['contactNumber'].hasError('required')">
+                    Contact number is required
+                  </small>
+                  <small class="text-danger" *ngIf="signupForm.controls['contactNumber'].touched && signupForm.controls['contactNumber'].hasError('pattern')">
+                    Please enter a valid Contact number
+                  </small>
+                </div>
+              
+                <!-- Password input -->
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="password" id="form3Example4" formControlName="password" class="form-control" />
+                  <label class="form-label" for="password">Password</label>
+                  <small class="text-danger" *ngIf="signupForm.controls['password'].touched && signupForm.controls['password'].hasError('required')">
+                    Password is required
+                  </small>
+                  <small class="text-danger" *ngIf="signupForm.controls['password'].touched && signupForm.controls['password'].hasError('pattern')">
+                    Password should contain at least 8 characters
+                  </small>
+                </div>
+                <!-- Submit button -->
+                <button type="submit" [disabled]="signupForm.invalid" data-mdb-button-init data-mdb-ripple-init class="btn btn-primary btn-block mb-4">
+                  Sign up
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Jumbotron -->
+</section>
+<!-- Section: Design Block -->
