fix(rjk):working

--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -60,7 +60,8 @@
           <span>{{ item.unit || "Not Available" }}</span>
           <span>{{ item.price || "Not Available" }}</span>
           <span>{{ item.usableArea + ' ' + item.measureUnit || "Not Available" }}</span>
-          <span>{{ item.availabilFrom || "Not Available" }}</span>
+          <span>{{ item.availableFrom || "Not Available" }}</span>
+          <span>{{ item.configuration || "Not Available" }}</span>
         </summary>
         <div class="mt-3 text-muted small">
           <p class="fw-bold">Highlights:</p>
