fix(rjk):working on add property form

--- a/property-rental-main-app/src/app/components/add-property/add-property.component.css
+++ b/property-rental-main-app/src/app/components/add-property/add-property.component.css
@@ -1,4 +1,4 @@
-/* button {
+button {
     padding: 10px 15px;
     border: none;
     background: #007bff;
@@ -7,4 +7,4 @@
     cursor: pointer;
     border-radius: 4px;
     margin-top: 10px;
-} */
+}
